WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117556
"Open Video in New Window" doesn't make sense in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=117556
Summary
"Open Video in New Window" doesn't make sense in fullscreen
Ruth Fong
Reported
2013-06-12 11:53:14 PDT
The "Open Video in New Window" item should be removed from the contextual menu when in fullscreen because it isn't useful then. A mediaIsInFullscreen() method needs to be exposed in order to decide when to show the "Open Video in New Window" item.
Attachments
Patch
(5.48 KB, patch)
2013-06-12 12:03 PDT
,
Ruth Fong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ruth Fong
Comment 1
2013-06-12 11:54:25 PDT
<
rdar://problem/14069845
>
Ruth Fong
Comment 2
2013-06-12 12:03:42 PDT
Created
attachment 204496
[details]
Patch
Beth Dakin
Comment 3
2013-06-12 12:33:51 PDT
Comment on
attachment 204496
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=204496&action=review
> Source/WebKit2/ChangeLog:14 > + Hooks into new InjectedBundleHitTestResult::mediaIsInFullscreen() method.
This is a nitpick, but in the future, you should add some newlines in this section of the ChangeLog to make it a little more readable.
WebKit Commit Bot
Comment 4
2013-06-12 12:58:38 PDT
Comment on
attachment 204496
[details]
Patch Clearing flags on attachment: 204496 Committed
r151520
: <
http://trac.webkit.org/changeset/151520
>
WebKit Commit Bot
Comment 5
2013-06-12 12:58:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug