"Open Video in New Window" doesn't make sense in fullscreen https://bugs.webkit.org/show_bug.cgi?id=117556

Patch by Ruth Fong <ruth_fong@apple.com> on 2013-06-12
Reviewed by Beth Dakin.

Source/WebCore:

No new tests needed.

* WebCore.exp.in: Added WebKit2 hook for mediaIsInFullscreen() method.

Source/WebKit2:

Adds method mediaIsInFullscreen() that checks if a media element is in
fullscreen mode, which is needed to decide when to display the
"Open Video in New Window" context menu item.

* WebProcess/InjectedBundle/API/c/WKBundleHitTestResult.cpp:
(WKBundleHitTestResultMediaIsInFullscreen): Added.
Hooks into new InjectedBundleHitTestResult::mediaIsInFullscreen() method.
* WebProcess/InjectedBundle/API/c/WKBundleHitTestResult.h:
* WebProcess/InjectedBundle/InjectedBundleHitTestResult.cpp:
(WebKit::InjectedBundleHitTestResult::mediaIsInFullscreen): Added.
Checks if media element is in fullscreen.
* WebProcess/InjectedBundle/InjectedBundleHitTestResult.h:

Canonical link: https://commits.webkit.org/135726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151520 268f45cc-cd09-0410-ab3c-d52691b4dbfc